[gd_scene load_steps=8 format=3 uid="uid://tginibuh3tyw"]

[ext_resource type="PackedScene" uid="uid://bieehfxk3a4ab" path="res://modules/rooms/room/room.tscn" id="1_5hxje"]
[ext_resource type="Script" path="res://modules/rooms/inherited_room/inherited_room.gd" id="2_h34sc"]
[ext_resource type="TileSet" uid="uid://dj1l5fgk0wftn" path="res://assets/tilesets/test_action_tileset.tres" id="3_lgd17"]
[ext_resource type="PackedScene" uid="uid://d07t8fkd5nupg" path="res://modules/combat_manager/combat_manager.tscn" id="3_m8nyl"]
[ext_resource type="PackedScene" uid="uid://fy55thn23ao5" path="res://modules/player_spawn_point/player_spawn_point.tscn" id="4_8b6hb"]
[ext_resource type="PackedScene" uid="uid://b7wc166dmd3bt" path="res://ui/combat_ui/combat_ui.tscn" id="4_57oim"]
[ext_resource type="PackedScene" uid="uid://eae3uik2yex2" path="res://ui/default_ui/default_ui.tscn" id="5_mift4"]

[node name="InheritedRoom" instance=ExtResource("1_5hxje")]
script = ExtResource("2_h34sc")

[node name="Map" parent="." index="0"]
tile_set = ExtResource("3_lgd17")
layer_0/name = "Floor"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(524307, 131072, 6, 458771, 131072, 5, 393235, 131072, 5, 327699, 131072, 5, 262163, 131072, 5, 196627, 131072, 5, 131091, 131072, 5, 65555, 131072, 5, 19, 131072, 4, 524306, 65536, 6, 458770, 65536, 5, 393234, 65536, 5, 327698, 65536, 5, 262162, 65536, 5, 196626, 65536, 5, 131090, 65536, 5, 65554, 65536, 5, 18, 65536, 4, 524305, 65536, 6, 458769, 65536, 5, 393233, 65536, 5, 327697, 65536, 5, 262161, 65536, 5, 196625, 65536, 5, 131089, 65536, 5, 65553, 65536, 5, 17, 65536, 4, 524304, 65536, 6, 458768, 65536, 5, 393232, 65536, 5, 327696, 65536, 5, 262160, 65536, 5, 196624, 65536, 5, 131088, 65536, 5, 65552, 65536, 5, 16, 65536, 4, 524303, 65536, 6, 458767, 65536, 5, 393231, 65536, 5, 327695, 65536, 5, 262159, 65536, 5, 196623, 65536, 5, 131087, 65536, 5, 65551, 65536, 5, 15, 65536, 4, 524302, 65536, 6, 458766, 65536, 5, 393230, 65536, 5, 327694, 65536, 5, 262158, 65536, 5, 196622, 65536, 5, 131086, 65536, 5, 65550, 65536, 5, 14, 65536, 4, 524301, 65536, 6, 458765, 65536, 5, 393229, 65536, 5, 327693, 65536, 5, 262157, 65536, 5, 196621, 65536, 5, 131085, 65536, 5, 65549, 65536, 5, 13, 65536, 4, 524300, 65536, 6, 458764, 65536, 5, 393228, 65536, 5, 327692, 65536, 5, 262156, 65536, 5, 196620, 65536, 5, 131084, 65536, 5, 65548, 65536, 5, 12, 65536, 4, 524299, 65536, 6, 458763, 65536, 5, 393227, 65536, 5, 327691, 65536, 5, 262155, 65536, 5, 196619, 65536, 5, 131083, 65536, 5, 65547, 65536, 5, 11, 65536, 4, 524298, 65536, 6, 458762, 65536, 5, 393226, 65536, 5, 327690, 65536, 5, 262154, 65536, 5, 196618, 65536, 5, 131082, 65536, 5, 65546, 65536, 5, 10, 65536, 4, 524297, 65536, 6, 458761, 65536, 5, 393225, 65536, 5, 327689, 65536, 5, 262153, 65536, 5, 196617, 65536, 5, 131081, 65536, 5, 65545, 65536, 5, 9, 65536, 4, 524296, 65536, 6, 458760, 65536, 5, 393224, 65536, 5, 327688, 65536, 5, 262152, 65536, 5, 196616, 65536, 5, 131080, 65536, 5, 65544, 65536, 5, 8, 65536, 4, 524295, 65536, 6, 458759, 65536, 5, 393223, 65536, 5, 327687, 65536, 5, 262151, 65536, 5, 196615, 65536, 5, 131079, 65536, 5, 65543, 65536, 5, 7, 65536, 4, 524294, 65536, 6, 458758, 65536, 5, 393222, 65536, 5, 327686, 65536, 5, 262150, 65536, 5, 196614, 65536, 5, 131078, 65536, 5, 65542, 65536, 5, 6, 65536, 4, 524293, 65536, 6, 458757, 65536, 5, 393221, 65536, 5, 327685, 65536, 5, 262149, 65536, 5, 196613, 65536, 5, 131077, 65536, 5, 65541, 65536, 5, 5, 65536, 4, 524292, 65536, 6, 458756, 65536, 5, 393220, 65536, 5, 327684, 65536, 5, 262148, 65536, 5, 196612, 65536, 5, 131076, 65536, 5, 65540, 65536, 5, 4, 65536, 4, 524291, 65536, 6, 458755, 65536, 5, 393219, 65536, 5, 327683, 65536, 5, 262147, 65536, 5, 196611, 65536, 5, 131075, 65536, 5, 65539, 65536, 5, 3, 65536, 4, 524290, 65536, 6, 458754, 65536, 5, 393218, 65536, 5, 327682, 65536, 5, 262146, 65536, 5, 196610, 65536, 5, 131074, 65536, 5, 65538, 65536, 5, 2, 65536, 4, 524289, 65536, 6, 458753, 65536, 5, 393217, 65536, 5, 327681, 65536, 5, 262145, 65536, 5, 196609, 65536, 5, 131073, 65536, 5, 65537, 65536, 5, 1, 65536, 4, 524288, 0, 6, 458752, 0, 5, 393216, 0, 5, 327680, 0, 5, 262144, 0, 5, 196608, 0, 5, 131072, 0, 5, 65536, 0, 5, 0, 0, 4)

[node name="DefaultSpawnPoint" parent="Map/SpawnPointContainer" index="0" instance=ExtResource("4_8b6hb")]

[node name="CombatManager" parent="." index="2" instance=ExtResource("3_m8nyl")]

[node name="CombatUI" parent="." index="3" instance=ExtResource("4_57oim")]
visible = false

[node name="DefaultUI" parent="." index="4" instance=ExtResource("5_mift4")]
